build: migrate fork to gradle-only mavenLocal workflow